in-manifests/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  ports:
    - name: test-app
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: test-app
